legacy/k3s/apps/rdtclient/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rdtclient
spec:
  replicas: 1
  selector:
    matchLabels: { app: rdtclient }
  template:
    metadata: { labels: { app: rdtclient } }
    spec:
      securityContext:
        runAsUser: 1007
        runAsGroup: 1027
        fsGroup: 1027
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: rdtclient
          image: ghcr.io/rogerfar/rdtclient:latest
          ports:
            - containerPort: 6500
              name: http
          volumeMounts:
            - name: downloads-rwx
              mountPath: /downloads
              subPath: rdtclient
      volumes:
        - name: downloads-rwx
          persistentVolumeClaim:
            claimName: downloads-rwx
