legacy/k3s/apps/rdtclient/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rdtclient
spec:
  selector: { app: rdtclient }
  ports:
    - name: http
      port: 80
      targetPort: http
